<resources>
    <string name="app_name">App Oyster</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]>
	</string>
    <string name="about_dialog_title">Livro Android</string>
    <string name="Atualizar">Atualizar</string>

    <!-- C -->
    <string name="appOyster">App oyster</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>

    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>

    <!-- N -->
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="share">Share</string>
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site do Livro</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>
    <string name="open">abrir</string>
    <string name="close">fechar</string>
    <string name="dicas_uteis">Dicas uteis</string>
    <string name="ostraFresca">Ostra fresca</string>
    <string name="fase_ostra">Fases da ostra</string>
    <string name="cuidados_ostra">Cuidados com a ostra</string>
    <string name="evitar_contamination">Evitar a contaminação</string>
    <string name="artigos">Artigos</string>
    <string name="banco_de_ideias">Banco de ideias para pesquisa</string>

    <string name="desenvolvimento">
        este aplicativo esta
        em fase de desenvolvimento qualquer duvida a respeito
        do mesmo pode entrar em contato com
        alexsusama@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banco_fragment">Banco de ideias Fragment</string>
    <string name="higiene">Higiene</string>
    <string name="historico">História do cultivo de ostra</string>
    <string name="reiceitas">Receitas</string>
    <string name="action_share">Compartilhar</string>
    <string name="curiosidades">Curiosidades</string>
    <string name="ostraVidaUtil">Vida Util</string>
    <string name="ostraTamanho">Tamanho da ostra comercial</string>
    <string name="ostra_noticias">Noticías</string>
    <string name="acento_teste">caralho cuzão</string>
    <string name="action_exit">sair</string>

</resources>
